--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astro-community/astro-embed-youtube": "^0.5.2",
     "@astrojs/tailwind": "^5.1.3",
+    "@astrojs/vue": "^5.0.2",
     "astro": "^5.0.5",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
-    "vue": "^3.4.20"
+    "vue": "^3.5.13"
   }
 }
