--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.0.3",
     "@astrojs/tailwind": "^5.1.4",
     "@astrojs/vue": "^5.0.3",
     "astro": "^5.1.1",
+    "astro-embed": "^0.9.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "vue": "^3.5.13"
