--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/mdx": "^4.0.3",
     "@astrojs/tailwind": "^5.1.4",
     "@astrojs/vue": "^5.0.3",
+    "@playform/compress": "^0.1.6",
     "astro": "^5.1.1",
     "astro-embed": "^0.9.0",
     "tailwind-merge": "^2.2.1",
