--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@playform/compress": "^0.1.6",
     "astro": "^5.1.1",
     "astro-embed": "^0.9.0",
+    "astro-icon": "^1.1.5",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "vue": "^3.5.13"
